src/test/ui/editions/edition-keywords-2015-2015-parsing.stderr
error: no rules expected the token `r#async`
  --> $DIR/edition-keywords-2015-2015-parsing.rs:24:31
   |
LL |     r#async = consumes_async!(r#async); //~ ERROR no rules expected the token `r#async`
   |                               ^^^^^^^

error: no rules expected the token `async`
  --> $DIR/edition-keywords-2015-2015-parsing.rs:25:35
   |
LL |     r#async = consumes_async_raw!(async); //~ ERROR no rules expected the token `async`
   |                                   ^^^^^

error: aborting due to 2 previous errors

